Refactor CSV data handling in CsvFilesReview notebook to use .txt files and update execution counts

--- a/notebooks/csv_files_review.ipynb
+++ b/notebooks/csv_files_review.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "09c45fa8",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "008c2246",
    "metadata": {},
    "outputs": [],
@@ -26,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0dc1c236",
    "metadata": {},
    "outputs": [],
    "source": [
-    "testing_datasets_list = [\n",
+    "testing_datasets_list_CSV = [\n",
     "    \"Test_Dst_NoAuction_ZScore_CF_1.csv\", \n",
     "    \"Test_Dst_NoAuction_ZScore_CF_2.csv\",\n",
     "    \"Test_Dst_NoAuction_ZScore_CF_3.csv\",\n",
@@ -43,7 +44,7 @@
     "    \"Test_Dst_NoAuction_ZScore_CF_9.csv\"\n",
     "]\n",
     "\n",
-    "training_datasets_list = [\n",
+    "training_datasets_list_CSV = [\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_1.csv\",\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_2.csv\",\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_3.csv\",\n",
@@ -53,6 +54,38 @@
     "    \"Train_Dst_NoAuction_ZScore_CF_7.csv\",\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_8.csv\",\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_9.csv\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7d36459f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testing_datasets_list = [\n",
+    "    \"Test_Dst_NoAuction_ZScore_CF_1.txt\", \n",
+    "    \"Test_Dst_NoAuction_ZScore_CF_2.txt\",\n",
+    "    \"Test_Dst_NoAuction_ZScore_CF_3.txt\",\n",
+    "    \"Test_Dst_NoAuction_ZScore_CF_4.txt\",\n",
+    "    \"Test_Dst_NoAuction_ZScore_CF_5.txt\",\n",
+    "    \"Test_Dst_NoAuction_ZScore_CF_6.txt\",\n",
+    "    \"Test_Dst_NoAuction_ZScore_CF_7.txt\",\n",
+    "    \"Test_Dst_NoAuction_ZScore_CF_8.txt\",\n",
+    "    \"Test_Dst_NoAuction_ZScore_CF_9.txt\"\n",
+    "]\n",
+    "\n",
+    "training_datasets_list = [\n",
+    "    \"Train_Dst_NoAuction_ZScore_CF_1.txt\",\n",
+    "    \"Train_Dst_NoAuction_ZScore_CF_2.txt\",\n",
+    "    \"Train_Dst_NoAuction_ZScore_CF_3.txt\",\n",
+    "    \"Train_Dst_NoAuction_ZScore_CF_4.txt\",\n",
+    "    \"Train_Dst_NoAuction_ZScore_CF_5.txt\",\n",
+    "    \"Train_Dst_NoAuction_ZScore_CF_6.txt\",\n",
+    "    \"Train_Dst_NoAuction_ZScore_CF_7.txt\",\n",
+    "    \"Train_Dst_NoAuction_ZScore_CF_8.txt\",\n",
+    "    \"Train_Dst_NoAuction_ZScore_CF_9.txt\",\n",
     "]"
    ]
   },
@@ -283,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "2c6f7321",
    "metadata": {},
    "outputs": [
@@ -291,83 +324,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================= Test_Dst_NoAuction_ZScore_CF_1.csv info: ==============================\n",
+      "======================= Test_Dst_NoAuction_ZScore_CF_1.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 38397 entries, 4.8382630e-01 to 1.3383771e+00.43\n",
-      "dtypes: float64(38397)\n",
-      "memory usage: 43.4 MB\n",
-      "shape of df : (148, 38397)\n",
-      "======================= Test_Dst_NoAuction_ZScore_CF_2.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 38397 entries, 0 to 38396\n",
+      "dtypes: float32(38397)\n",
+      "memory usage: 21.8 MB\n",
+      "shape of df : (149, 38397)\n",
+      "======================= Test_Dst_NoAuction_ZScore_CF_2.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 28535 entries, 4.7635007e-01 to 1.3392674e+00.241\n",
-      "dtypes: float64(28535)\n",
-      "memory usage: 32.2 MB\n",
-      "shape of df : (148, 28535)\n",
-      "======================= Test_Dst_NoAuction_ZScore_CF_3.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 28535 entries, 0 to 28534\n",
+      "dtypes: float32(28535)\n",
+      "memory usage: 16.2 MB\n",
+      "shape of df : (149, 28535)\n",
+      "======================= Test_Dst_NoAuction_ZScore_CF_3.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 37023 entries, 4.4249060e-01 to 1.2251787e+00.49\n",
-      "dtypes: float64(37023)\n",
-      "memory usage: 41.8 MB\n",
-      "shape of df : (148, 37023)\n",
-      "======================= Test_Dst_NoAuction_ZScore_CF_4.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 37023 entries, 0 to 37022\n",
+      "dtypes: float32(37023)\n",
+      "memory usage: 21.0 MB\n",
+      "shape of df : (149, 37023)\n",
+      "======================= Test_Dst_NoAuction_ZScore_CF_4.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 34785 entries, 4.0400428e-01 to 1.1659679e+00.26\n",
-      "dtypes: float64(34785)\n",
-      "memory usage: 39.3 MB\n",
-      "shape of df : (148, 34785)\n",
-      "======================= Test_Dst_NoAuction_ZScore_CF_5.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 34785 entries, 0 to 34784\n",
+      "dtypes: float32(34785)\n",
+      "memory usage: 19.8 MB\n",
+      "shape of df : (149, 34785)\n",
+      "======================= Test_Dst_NoAuction_ZScore_CF_5.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 39152 entries, 4.0280452e-01 to 1.1485452e+00.1100\n",
-      "dtypes: float64(39152)\n",
-      "memory usage: 44.2 MB\n",
-      "shape of df : (148, 39152)\n",
-      "======================= Test_Dst_NoAuction_ZScore_CF_6.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 39152 entries, 0 to 39151\n",
+      "dtypes: float32(39152)\n",
+      "memory usage: 22.3 MB\n",
+      "shape of df : (149, 39152)\n",
+      "======================= Test_Dst_NoAuction_ZScore_CF_6.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 37346 entries, 3.8917230e-01 to 1.2349533e+00\n",
-      "dtypes: float64(37346)\n",
-      "memory usage: 42.2 MB\n",
-      "shape of df : (148, 37346)\n",
-      "======================= Test_Dst_NoAuction_ZScore_CF_7.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 37346 entries, 0 to 37345\n",
+      "dtypes: float32(37346)\n",
+      "memory usage: 21.2 MB\n",
+      "shape of df : (149, 37346)\n",
+      "======================= Test_Dst_NoAuction_ZScore_CF_7.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 55478 entries, 3.8269280e-01 to 1.3757702e+00.119\n",
-      "dtypes: float64(55478)\n",
-      "memory usage: 62.6 MB\n",
-      "shape of df : (148, 55478)\n",
-      "======================= Test_Dst_NoAuction_ZScore_CF_8.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 55478 entries, 0 to 55477\n",
+      "dtypes: float32(55478)\n",
+      "memory usage: 31.5 MB\n",
+      "shape of df : (149, 55478)\n",
+      "======================= Test_Dst_NoAuction_ZScore_CF_8.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 52172 entries, 3.7656592e-01 to 1.3275964e+00.171\n",
-      "dtypes: float64(52172)\n",
-      "memory usage: 58.9 MB\n",
-      "shape of df : (148, 52172)\n",
-      "======================= Test_Dst_NoAuction_ZScore_CF_9.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 52172 entries, 0 to 52171\n",
+      "dtypes: float32(52172)\n",
+      "memory usage: 29.7 MB\n",
+      "shape of df : (149, 52172)\n",
+      "======================= Test_Dst_NoAuction_ZScore_CF_9.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 31937 entries, 3.8181499e-01 to 1.4627378e+00.224\n",
-      "dtypes: float64(31937)\n",
-      "memory usage: 36.1 MB\n",
-      "shape of df : (148, 31937)\n"
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 31937 entries, 0 to 31936\n",
+      "dtypes: float32(31937)\n",
+      "memory usage: 18.2 MB\n",
+      "shape of df : (149, 31937)\n"
      ]
     }
    ],
    "source": [
     "for i in testing_datasets_list:\n",
     "    print(f\"======================= {i} info: ==============================\")\n",
-    "    df = pd.read_csv(TEST_DATA_DIR / i)\n",
+    "    # df = pd.read_csv(TEST_DATA_DIR / i)\n",
+    "    data = np.loadtxt(TEST_DATA_DIR / i, dtype=np.float32)\n",
+    "    df = pd.DataFrame(data)\n",
     "    df.info()\n",
     "    print(f\"shape of df : {df.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b9ba8edc",
    "metadata": {},
    "outputs": [
@@ -375,70 +410,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================= Train_Dst_NoAuction_ZScore_CF_1.csv info: ==============================\n",
+      "======================= Train_Dst_NoAuction_ZScore_CF_1.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 39512 entries, 4.0827462e-01 to 1.3077480e+00.99\n",
-      "dtypes: float64(39512)\n",
-      "memory usage: 44.6 MB\n",
-      "shape of df : (148, 39512)\n",
-      "======================= Train_Dst_NoAuction_ZScore_CF_2.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 39512 entries, 0 to 39511\n",
+      "dtypes: float32(39512)\n",
+      "memory usage: 22.5 MB\n",
+      "shape of df : (149, 39512)\n",
+      "======================= Train_Dst_NoAuction_ZScore_CF_2.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 77909 entries, 3.3031790e-01 to 1.2606347e+00.43\n",
-      "dtypes: float64(77909)\n",
-      "memory usage: 88.0 MB\n",
-      "shape of df : (148, 77909)\n",
-      "======================= Train_Dst_NoAuction_ZScore_CF_3.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 77909 entries, 0 to 77908\n",
+      "dtypes: float32(77909)\n",
+      "memory usage: 44.3 MB\n",
+      "shape of df : (149, 77909)\n",
+      "======================= Train_Dst_NoAuction_ZScore_CF_3.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 106444 entries, 3.0294155e-01 to 1.3020318e+00.241\n",
-      "dtypes: float64(106444)\n",
-      "memory usage: 120.2 MB\n",
-      "shape of df : (148, 106444)\n",
-      "======================= Train_Dst_NoAuction_ZScore_CF_4.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 106444 entries, 0 to 106443\n",
+      "dtypes: float32(106444)\n",
+      "memory usage: 60.5 MB\n",
+      "shape of df : (149, 106444)\n",
+      "======================= Train_Dst_NoAuction_ZScore_CF_4.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 143467 entries, 3.4092450e-01 to 1.2540794e+00.73\n",
-      "dtypes: float64(143467)\n",
-      "memory usage: 162.0 MB\n",
-      "shape of df : (148, 143467)\n",
-      "======================= Train_Dst_NoAuction_ZScore_CF_5.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 143467 entries, 0 to 143466\n",
+      "dtypes: float32(143467)\n",
+      "memory usage: 81.5 MB\n",
+      "shape of df : (149, 143467)\n",
+      "======================= Train_Dst_NoAuction_ZScore_CF_5.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 178252 entries, 3.4266415e-01 to 1.1685920e+00.65\n",
-      "dtypes: float64(178252)\n",
-      "memory usage: 201.3 MB\n",
-      "shape of df : (148, 178252)\n",
-      "======================= Train_Dst_NoAuction_ZScore_CF_6.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 178252 entries, 0 to 178251\n",
+      "dtypes: float32(178252)\n",
+      "memory usage: 101.3 MB\n",
+      "shape of df : (149, 178252)\n",
+      "======================= Train_Dst_NoAuction_ZScore_CF_6.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 217404 entries, 3.1927304e-01 to 1.1221159e+00.1708\n",
-      "dtypes: float64(217404)\n",
-      "memory usage: 245.5 MB\n",
-      "shape of df : (148, 217404)\n",
-      "======================= Train_Dst_NoAuction_ZScore_CF_7.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 217404 entries, 0 to 217403\n",
+      "dtypes: float32(217404)\n",
+      "memory usage: 123.6 MB\n",
+      "shape of df : (149, 217404)\n",
+      "======================= Train_Dst_NoAuction_ZScore_CF_7.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 254750 entries, 3.3174014e-01 to 1.2478890e+00.102\n",
-      "dtypes: float64(254750)\n",
-      "memory usage: 287.7 MB\n",
-      "shape of df : (148, 254750)\n",
-      "======================= Train_Dst_NoAuction_ZScore_CF_8.csv info: ==============================\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 254750 entries, 0 to 254749\n",
+      "dtypes: float32(254750)\n",
+      "memory usage: 144.8 MB\n",
+      "shape of df : (149, 254750)\n",
+      "======================= Train_Dst_NoAuction_ZScore_CF_8.txt info: ==============================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Columns: 310228 entries, 3.1257318e-01 to 1.3413794e+00.142\n",
-      "dtypes: float64(310228)\n",
-      "memory usage: 350.3 MB\n",
-      "shape of df : (148, 310228)\n",
-      "======================= Train_Dst_NoAuction_ZScore_CF_9.csv info: ==============================\n"
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 310228 entries, 0 to 310227\n",
+      "dtypes: float32(310228)\n",
+      "memory usage: 176.3 MB\n",
+      "shape of df : (149, 310228)\n",
+      "======================= Train_Dst_NoAuction_ZScore_CF_9.txt info: ==============================\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Columns: 362400 entries, 0 to 362399\n",
+      "dtypes: float32(362400)\n",
+      "memory usage: 206.0 MB\n",
+      "shape of df : (149, 362400)\n"
      ]
     }
    ],
    "source": [
     "for i in training_datasets_list:\n",
     "    print(f\"======================= {i} info: ==============================\")\n",
-    "    df = pd.read_csv(TRAIN_DATA_DIR / i)\n",
+    "    data = np.loadtxt(TRAIN_DATA_DIR / i, dtype=np.float32)\n",
+    "    df = pd.DataFrame(data)\n",
     "    df.info()\n",
     "    print(f\"shape of df : {df.shape}\")"
    ]
