Refactor dataset handling in CsvFilesReview notebook to use lists for dataset names and remove unused CSV references

--- a/notebooks/csv_files_review.ipynb
+++ b/notebooks/csv_files_review.ipynb
@@ -28,43 +28,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc1c236",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testing_datasets_list_CSV = [\n",
-    "    \"Test_Dst_NoAuction_ZScore_CF_1.csv\", \n",
-    "    \"Test_Dst_NoAuction_ZScore_CF_2.csv\",\n",
-    "    \"Test_Dst_NoAuction_ZScore_CF_3.csv\",\n",
-    "    \"Test_Dst_NoAuction_ZScore_CF_4.csv\",\n",
-    "    \"Test_Dst_NoAuction_ZScore_CF_5.csv\",\n",
-    "    \"Test_Dst_NoAuction_ZScore_CF_6.csv\",\n",
-    "    \"Test_Dst_NoAuction_ZScore_CF_7.csv\",\n",
-    "    \"Test_Dst_NoAuction_ZScore_CF_8.csv\",\n",
-    "    \"Test_Dst_NoAuction_ZScore_CF_9.csv\"\n",
-    "]\n",
-    "\n",
-    "training_datasets_list_CSV = [\n",
-    "    \"Train_Dst_NoAuction_ZScore_CF_1.csv\",\n",
-    "    \"Train_Dst_NoAuction_ZScore_CF_2.csv\",\n",
-    "    \"Train_Dst_NoAuction_ZScore_CF_3.csv\",\n",
-    "    \"Train_Dst_NoAuction_ZScore_CF_4.csv\",\n",
-    "    \"Train_Dst_NoAuction_ZScore_CF_5.csv\",\n",
-    "    \"Train_Dst_NoAuction_ZScore_CF_6.csv\",\n",
-    "    \"Train_Dst_NoAuction_ZScore_CF_7.csv\",\n",
-    "    \"Train_Dst_NoAuction_ZScore_CF_8.csv\",\n",
-    "    \"Train_Dst_NoAuction_ZScore_CF_9.csv\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "7d36459f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "testing_datasets_list = [\n",
+    "testing_datasets_name_list = [\n",
     "    \"Test_Dst_NoAuction_ZScore_CF_1.txt\", \n",
     "    \"Test_Dst_NoAuction_ZScore_CF_2.txt\",\n",
     "    \"Test_Dst_NoAuction_ZScore_CF_3.txt\",\n",
@@ -76,7 +44,7 @@
     "    \"Test_Dst_NoAuction_ZScore_CF_9.txt\"\n",
     "]\n",
     "\n",
-    "training_datasets_list = [\n",
+    "training_datasets_name_list = [\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_1.txt\",\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_2.txt\",\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_3.txt\",\n",
@@ -86,237 +54,15 @@
     "    \"Train_Dst_NoAuction_ZScore_CF_7.txt\",\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_8.txt\",\n",
     "    \"Train_Dst_NoAuction_ZScore_CF_9.txt\",\n",
-    "]"
+    "]\n",
+    "\n",
+    "testing_datasets_name_list = []\n",
+    "training_datasets_name_list = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "474eadd3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>4.8382630e-01</th>\n",
-       "      <th>4.8382630e-01.1</th>\n",
-       "      <th>4.8280533e-01</th>\n",
-       "      <th>4.8280533e-01.1</th>\n",
-       "      <th>4.8280533e-01.2</th>\n",
-       "      <th>4.8280533e-01.3</th>\n",
-       "      <th>4.8280533e-01.4</th>\n",
-       "      <th>4.8280533e-01.5</th>\n",
-       "      <th>4.8280533e-01.6</th>\n",
-       "      <th>4.8280533e-01.7</th>\n",
-       "      <th>...</th>\n",
-       "      <th>1.3383771e+00.34</th>\n",
-       "      <th>1.3383771e+00.35</th>\n",
-       "      <th>1.3383771e+00.36</th>\n",
-       "      <th>1.3383771e+00.37</th>\n",
-       "      <th>1.3383771e+00.38</th>\n",
-       "      <th>1.3383771e+00.39</th>\n",
-       "      <th>1.3383771e+00.40</th>\n",
-       "      <th>1.3383771e+00.41</th>\n",
-       "      <th>1.3383771e+00.42</th>\n",
-       "      <th>1.3383771e+00.43</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.411866</td>\n",
-       "      <td>-0.411866</td>\n",
-       "      <td>-0.515418</td>\n",
-       "      <td>-0.182047</td>\n",
-       "      <td>-0.182047</td>\n",
-       "      <td>-0.411866</td>\n",
-       "      <td>-0.411866</td>\n",
-       "      <td>-0.544813</td>\n",
-       "      <td>-0.411866</td>\n",
-       "      <td>-0.411866</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.544813</td>\n",
-       "      <td>-0.478005</td>\n",
-       "      <td>-0.544813</td>\n",
-       "      <td>-0.678429</td>\n",
-       "      <td>-0.678429</td>\n",
-       "      <td>-0.678429</td>\n",
-       "      <td>-0.678429</td>\n",
-       "      <td>-0.678429</td>\n",
-       "      <td>-0.678429</td>\n",
-       "      <td>-0.678429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>0.484376</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.337361</td>\n",
-       "      <td>1.337361</td>\n",
-       "      <td>1.337361</td>\n",
-       "      <td>1.338384</td>\n",
-       "      <td>1.338384</td>\n",
-       "      <td>1.338384</td>\n",
-       "      <td>1.339407</td>\n",
-       "      <td>1.339407</td>\n",
-       "      <td>1.340429</td>\n",
-       "      <td>1.340429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.462407</td>\n",
-       "      <td>-0.462407</td>\n",
-       "      <td>-0.462407</td>\n",
-       "      <td>-0.462407</td>\n",
-       "      <td>-0.462407</td>\n",
-       "      <td>-0.462407</td>\n",
-       "      <td>-0.462407</td>\n",
-       "      <td>-0.462407</td>\n",
-       "      <td>-0.497146</td>\n",
-       "      <td>-0.615169</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.394711</td>\n",
-       "      <td>-0.394711</td>\n",
-       "      <td>-0.482894</td>\n",
-       "      <td>-0.543910</td>\n",
-       "      <td>-0.454836</td>\n",
-       "      <td>-0.360418</td>\n",
-       "      <td>-0.543019</td>\n",
-       "      <td>-0.453055</td>\n",
-       "      <td>-0.557716</td>\n",
-       "      <td>-0.557716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.483370</td>\n",
-       "      <td>0.483370</td>\n",
-       "      <td>0.482350</td>\n",
-       "      <td>0.483370</td>\n",
-       "      <td>0.483370</td>\n",
-       "      <td>0.483370</td>\n",
-       "      <td>0.483370</td>\n",
-       "      <td>0.483370</td>\n",
-       "      <td>0.483370</td>\n",
-       "      <td>0.483370</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.337728</td>\n",
-       "      <td>1.337728</td>\n",
-       "      <td>1.337728</td>\n",
-       "      <td>1.337728</td>\n",
-       "      <td>1.337728</td>\n",
-       "      <td>1.337728</td>\n",
-       "      <td>1.337728</td>\n",
-       "      <td>1.337728</td>\n",
-       "      <td>1.337728</td>\n",
-       "      <td>1.337728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.368474</td>\n",
-       "      <td>-0.368474</td>\n",
-       "      <td>-0.408200</td>\n",
-       "      <td>-0.293628</td>\n",
-       "      <td>-0.293628</td>\n",
-       "      <td>-0.293628</td>\n",
-       "      <td>-0.293628</td>\n",
-       "      <td>-0.293628</td>\n",
-       "      <td>-0.293628</td>\n",
-       "      <td>-0.293628</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.455986</td>\n",
-       "      <td>-0.455986</td>\n",
-       "      <td>-0.455986</td>\n",
-       "      <td>-0.455986</td>\n",
-       "      <td>-0.455986</td>\n",
-       "      <td>-0.455986</td>\n",
-       "      <td>-0.455986</td>\n",
-       "      <td>-0.455986</td>\n",
-       "      <td>-0.455986</td>\n",
-       "      <td>-0.455986</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 38397 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   4.8382630e-01  4.8382630e-01.1  4.8280533e-01  4.8280533e-01.1  \\\n",
-       "0      -0.411866        -0.411866      -0.515418        -0.182047   \n",
-       "1       0.484376         0.484376       0.484376         0.484376   \n",
-       "2      -0.462407        -0.462407      -0.462407        -0.462407   \n",
-       "3       0.483370         0.483370       0.482350         0.483370   \n",
-       "4      -0.368474        -0.368474      -0.408200        -0.293628   \n",
-       "\n",
-       "   4.8280533e-01.2  4.8280533e-01.3  4.8280533e-01.4  4.8280533e-01.5  \\\n",
-       "0        -0.182047        -0.411866        -0.411866        -0.544813   \n",
-       "1         0.484376         0.484376         0.484376         0.484376   \n",
-       "2        -0.462407        -0.462407        -0.462407        -0.462407   \n",
-       "3         0.483370         0.483370         0.483370         0.483370   \n",
-       "4        -0.293628        -0.293628        -0.293628        -0.293628   \n",
-       "\n",
-       "   4.8280533e-01.6  4.8280533e-01.7  ...  1.3383771e+00.34  1.3383771e+00.35  \\\n",
-       "0        -0.411866        -0.411866  ...         -0.544813         -0.478005   \n",
-       "1         0.484376         0.484376  ...          1.337361          1.337361   \n",
-       "2        -0.497146        -0.615169  ...         -0.394711         -0.394711   \n",
-       "3         0.483370         0.483370  ...          1.337728          1.337728   \n",
-       "4        -0.293628        -0.293628  ...         -0.455986         -0.455986   \n",
-       "\n",
-       "   1.3383771e+00.36  1.3383771e+00.37  1.3383771e+00.38  1.3383771e+00.39  \\\n",
-       "0         -0.544813         -0.678429         -0.678429         -0.678429   \n",
-       "1          1.337361          1.338384          1.338384          1.338384   \n",
-       "2         -0.482894         -0.543910         -0.454836         -0.360418   \n",
-       "3          1.337728          1.337728          1.337728          1.337728   \n",
-       "4         -0.455986         -0.455986         -0.455986         -0.455986   \n",
-       "\n",
-       "   1.3383771e+00.40  1.3383771e+00.41  1.3383771e+00.42  1.3383771e+00.43  \n",
-       "0         -0.678429         -0.678429         -0.678429         -0.678429  \n",
-       "1          1.339407          1.339407          1.340429          1.340429  \n",
-       "2         -0.543019         -0.453055         -0.557716         -0.557716  \n",
-       "3          1.337728          1.337728          1.337728          1.337728  \n",
-       "4         -0.455986         -0.455986         -0.455986         -0.455986  \n",
-       "\n",
-       "[5 rows x 38397 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(TEST_DATA_DIR / \"Test_Dst_NoAuction_ZScore_CF_1.csv\")\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2c6f7321",
    "metadata": {},
    "outputs": [
@@ -391,18 +137,16 @@
     }
    ],
    "source": [
-    "for i in testing_datasets_list:\n",
-    "    print(f\"======================= {i} info: ==============================\")\n",
-    "    # df = pd.read_csv(TEST_DATA_DIR / i)\n",
+    "for i in testing_datasets_name_list:\n",
     "    data = np.loadtxt(TEST_DATA_DIR / i, dtype=np.float32)\n",
     "    df = pd.DataFrame(data)\n",
-    "    df.info()\n",
-    "    print(f\"shape of df : {df.shape}\")"
+    "    \n",
+    "    testing_datasets_name_list.append(df)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b9ba8edc",
    "metadata": {},
    "outputs": [
@@ -477,7 +221,7 @@
     }
    ],
    "source": [
-    "for i in training_datasets_list:\n",
+    "for i in training_datasets_name_list:\n",
     "    print(f\"======================= {i} info: ==============================\")\n",
     "    data = np.loadtxt(TRAIN_DATA_DIR / i, dtype=np.float32)\n",
     "    df = pd.DataFrame(data)\n",
